# Arbitro

./: ..gitignore.kate-swp  .env  .gitignore  .ignore  .journal  Arbitro.sh  Cargo.toml  [  ]  package-lock.json  package.json  rustfmt.toml
frontend/: app.js  app.vue  index.html  package-lock.json  package.json  prettierrc.json  style.css  vite.config.js  vite.config.ts
frontend/components/: Arbitro.vue  Tokens.vue
frontend/lib/: OriginCalls.ts
frontend/lib/chain/: ChainData.ts
frontend/lib/factory/: AnyFactory.ts  IFactroy.ts  V2Factory.ts  V3Factory.ts  V4Factory.ts
frontend/lib/pool/: AnyPool.ts  V2Pool.ts  V3Pool.ts  V4Pool.ts
lib/arbitro/: Cargo.toml
lib/arbitro/src/: edge.rs  lib.rs  node.rs  path.rs
lib/chain_arbitro/: Cargo.toml
lib/chain_arbitro/src/: chain_arbitro.rs  lib.rs  manager.rs  sim_pool.rs
lib/chain_json/: Cargo.toml
lib/chain_json/config/: chainsData.json
lib/chain_json/src/: chain.rs  chain_json_model.rs  chains.rs  lib.rs
lib/chain_live/: Cargo.toml
lib/chain_live/src/: any_factory.rs  any_pool.rs  chain.rs  chains.rs  clpool.rs  factory.rs  lib.rs  search_context.rs  token.rs  v2_factory.rs  v2_pool.rs  v3_factory.rs  v3_pool.rs  v4_factory.rs  v4_pool.rs
lib/chains/: Cargo.toml
lib/chains/config/: chainsData.json
lib/chains/src/: chain.rs  chain_json_model.rs  chains.rs  lib.rs  token.rs
lib/chains_db/: Cargo.toml
lib/chains_db/src/: chains_db.rs  default.rs  lib.rs  p_any.rs  p_config.rs  p_key.rs  p_state.rs  p_ticks.rs  p_tokens.rs  sled_pool_key.rs  sled_pool_parts.rs
lib/dexes/: Cargo.toml
lib/dexes/src/: any_pool.rs  clpool.rs  factory.rs  lib.rs  v2_pool.rs  v3_factory.rs  v3_pool.rs  v4_factory.rs  v4_pool.rs  words.rs
lib/sol/: Cargo.toml
lib/sol/src/: sol_types.rs
lib/v3/: Cargo.toml
lib/v3/src/v3_base/: bitmap_math.rs
server/: Cargo.toml  manager
server/src/: main.rs
src/: .chain_sim.rs.kate-swp  anvil_test.rs  arbitro.rs  block_decoder.rs  block_service.rs  blockchain_db.rs  bz  chain_graph.rs  chain_observer.rs  chain_sim.rs  chain_src.rs  chain_svc.rs  chainsData.json  decoder.rs  dex.rs  err.rs  factory.rs  main.rs  mapped_vec.rs  mem_pool.rs  mult_provider.rs  other_thing.rs  pair.rs  pool.rs  pool_action.rs  pool_utils.rs  seeker.rs  simulacrum.rs  supervisor.rs  tick.rs  tick_math.rs  token.rs  trade.rs  v2_pool.rs  v2_pool_sim.rs  v2_pool_src.rs  v3_pool.rs  v3_pool_sim.rs  v3_pool_src.rs  v4_pool_src.rs  (+3 more)
src/pathfinder/: mod.rs
