[workspace]
resolver = "3"
members = [
  "lib/arbitro",
  "lib/chain_arbitro",
  "lib/chains",
  "lib/dexes",
  "lib/sol",
  "lib/v3",
  "server",
]

[workspace.dependencies]
alloy = "1.0.31"
alloy-contract = "1.0.27"
alloy-primitives = "1.3.1"
alloy-provider = "1.0.31"
alloy-rpc-types = "1.0.31"
alloy-sol-types = "1.3.1"
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.23"
