[workspace]
resolver = "3"
members = [
  "lib/arbitro",
  "lib/chain_arbitro",
  "lib/chains",
  "lib/chains_db",
  "lib/chains_db",
  "lib/dexes",
  "lib/sol",
  "lib/v3",
  "server",
]

[workspace.dependencies]
alloy = "1.0.31"
alloy-contract = "1.0.27"
alloy-primitives = "1.3.1"
alloy-provider = "1.0.31"
alloy-rpc-types = "1.0.31"
alloy-sol-types = "1.3.1"
bincode = { version = "2.0.1", features = ["derive", "serde"] }
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.23"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
