[workspace]
resolver = "3"
members = [
  "lib/arbitro",
  "lib/chain_arbitro",
  "lib/chain_json",
  "lib/chain_live",
  "lib/chains_db",
  "lib/sol",
  "lib/v3",
  "server",
]

[workspace.dependencies]
alloy = "1.0.31"
alloy-contract = "1.0.27"
alloy-primitives = "1.3.1"
alloy-provider = "1.0.31"
alloy-rpc-types = "1.0.31"
alloy-sol-types = "1.3.1"
bincode = { version = "2.0.1", features = ["derive", "serde"] }
chain_arbitro = { path = "./lib/chain_arbitro" }
chain_db = { path = "./lib/chains_db" }
chain_json = { path = "./lib/chain_json" }
chain_live = { path = "./lib/chain_live" }
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.23"
sol = { path = "./lib/sol" }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tower = "0.5.2"
v3 = { path = "./lib/v3" }
