[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-server = "0.7.2"
chain_arbitro = { path = "../lib/chain_arbitro" }
chain_json = { path = "../lib/chain_json" }
hyper = "1.7.0"
npm_rs = "1.0.0"
serde = { workspace = true, features = ["derive"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["fs"] }
