[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-server = "0.7.2"
chain_arbitro = { workspace = true }
chain_json = { workspace = true }
hyper = "1.7.0"
npm_rs = "1.0.0"
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
tower-http = { version = "0.6.6", features = ["fs"] }
