[package]
name = "chain_arbitro"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true }
chain_db = { workspace = true }
chain_json = { workspace = true }
chain_live = { workspace = true }
futures = "0.3.31"
sol = { workspace = true }
tokio = "1.48.0"
v3 = { workspace = true }
