[package]
name = "chain_live"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-sol-types = { workspace = true }
bincode = { workspace = true }
chain_db = { workspace = true }
chain_json = { workspace = true }
futures = "0.3.31"
serde = { workspace = true }
sol = { path = "../sol" }
tokio = { workspace = true }
tower = { workspace = true }
url = "2.5.7"
v3 = { workspace = true }
