[package]
name = "chains"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = "1.0.99"
bincode = { workspace = true }
dexes = { path = "../dexes" }
futures = "0.3.31"
home = "0.5.11"
serde = { workspace = true }
serde_json = { workspace = true }
sled = "0.34.7"
sol = { path = "../sol" }
tokio = { workspace = true }
tower = "0.5.2"
