[package]
name = "dexes"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-sol-types = { workspace = true }
bincode = { workspace = true }
futures = "0.3.31"
serde = { workspace = true }
sol = { path = "../sol" }
v3 = { path = "../v3" }
